<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/clothing_item_fragment_id"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/wardrobe_photo"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:scaleType="centerInside"
            android:cropToPadding="true"
            android:background="@android:color/darker_gray"/>

        <ImageButton
            android:id="@+id/wardrobe_camera"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_menu_camera"/>

        <EditText
            android:id="@+id/clothing_item_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/clothing_item_name_label" />

        <EditText
            android:id="@+id/clothing_item_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/clothing_item_type_label" />

        <EditText
            android:id="@+id/clothing_item_tags"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/clothing_item_tags_label" />

        <Button
            android:id="@+id/save_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nav_save_label" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>